<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            app:theme="@style/MyCustomTabText"
            android:icon="@drawable/ic_orders"
            android:title="@string/dashboard_menu"/>
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_order_history"
            android:title="@string/order_history_menu"/>

        <item
            android:id="@+id/nav_order_summary"
            android:icon="@drawable/ic_order_summary"
            android:title="@string/order_summary_menu"/>
        <item
            android:id="@+id/nav_search_order"
            android:icon="@drawable/ic_search_orders"
            android:title="@string/search_orders_menu"/>

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_password"
            android:title="@string/change_password_menu"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_menu"/>

    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>-->

</menu>
