<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/tv_orderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/order_number"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_orderInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_info"
                android:text="@string/order_number" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_orderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_orderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_customerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/customer_name"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_customerMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/customer_mobile"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_orderRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_orderRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="Order Rating - 3/5" />

                <TextView
                    android:id="@+id/tv_orderReview"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_deliveryRating"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_deliveryRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="Delivery Rating - 3/5" />

                <TextView
                    android:id="@+id/tv_deliveryReview"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        <TextView
            android:id="@+id/tv_totalDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginRight="0dp"
            android:gravity="end"
            android:textSize="17sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_promoDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginRight="0dp"
            android:gravity="end"
            android:textColor="@color/colorRed"
            android:textSize="17sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_totalTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginRight="0dp"
            android:gravity="end"
            android:textSize="17sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_orderTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginRight="0dp"
            android:gravity="end"
            android:text="@string/item_price"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_updateStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:inputType="textCapSentences"
                    android:text="@string/update_status"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_printOrder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:inputType="textCapSentences"
                    android:text="@string/kitchen_ticket"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_printBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/button_style"
                android:inputType="textCapSentences"
                android:text="@string/print_check"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />
</LinearLayout>